LATEST

* Fixed issue causing the renderer to hang if clouds were enabled.
* Added option to disable sun texture in the Lighting tab.
* Added new texture paths to support Minecraft 1.13+ resource packs.
* Fixed deadlock issue in the renderer.
  Render workers could get deadlocked when waiting for the next frame to start
  rendering. This issue seems to be most common at the start of a render job.
* Added sky fog blending setting in the Sky&Fog tab.
  This setting is used to adjust how much the fog color is
  blended over the sky/skymap.

1.4.5 - 2018-02-18

* Added radial knob control to improve editing angles like sun azimuth.
* Fixed incorrect dark oak leaf color blending.
* Added new solid color sky mode.
* Fixed wrong texture for pink and gray glazed terracotta.

1.4.4 - 2017-12-31

* Windows installer now detects Java 9 installations.
* Added armor rendering for player entities.
* Added armor stand rendering.
* Added banner rendering.
* Added UI elements to modify entity armor in the Entities tab.
  This currently applies to players and armor stands.
* Added a drop down menu to the entity posing controls for selecting which limb
  to pose.
* Tweaked stone wall rendering to behave more like Minecraft.
* Plugins can now modify the main window tabs.
* Added banner rendering.
* Improve bed rendering for Minecraft 1.12 (colored beds).
* Y clipping is now a per-scene setting, with an upper clip value.
* The Y clip planes now cull non-player entities.
* Spruce and birch leaf colors are now fixed like in Minecraft.

1.4.3 - 2017-07-22

* Various small UI improvements and bug fixes.
* Improved the way fences, stone walls, glass panes, and iron bars
  connect to other blocks.
* Added plugin manager in the launcher, among the advanced settings.
* The Plugin API now expects plugins to provide metadata.
* Made resource pack loading more flexible.
* Fog is now blended with the sky near the horizon.
* Minecraft block IDs are now displayed in the block info tooltip.